--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 
 .container{
@@ -10,7 +9,7 @@
     margin: 0 auto;
 }
 .header{
-    background-color: rgb(145, 145, 145);
+    background-color: rgb(0, 0, 0);
     padding-top: 36px;
     padding-bottom: 200px;
 }
@@ -18,4 +17,72 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+}
+.logo{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgb(255, 255, 255);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    
+}
+.navigation-holder{
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-evenly;
+}
+.nav-links a {
+text-decoration: none;
+color: rgb(255, 255, 255);
+text-transform:uppercase;
+letter-spacing: 2px;
+font-size: 13px;
+}
+.header-title{
+    margin-top: 110px;
+    margin-bottom: 80px;
+    position: relative;
+}
+.header-subtitle-text{
+    display: inline-block;
+    border-left:  1px solid #8C8C8C;
+    padding: 8px 0 8px 20px;
+    color: #8C8C8C;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 1.5px;
+    margin-bottom: 13px;
+}
+.header-title-text{
+    font-size: 90px;
+    font-weight: bold;
+    color: white;
+    max-width: 620px;
+    line-height: 1;
+}
+.join{
+    background-color: #FEBE02;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 110px;
+    height: 110px;
+    padding:16px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    align-items: flex-start;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    border-radius: 6px;
 }
