--- a/style.css
+++ b/style.css
@@ -275,4 +275,72 @@ font-size: 13px;
 .img-card-2{background-image: url(/img/card-2.png);}
 .img-card-3{background-image: url(/img/card-3.png);}
 .img-card-4{background-image: url(/img/card-4.png);}
+.footer{
+    background-color: #f5f6f8;
+    padding: 60px 0;
+}
+.course-info-title{
+    font-weight: 600;
+    font-size:70px;
+    color: #1a1a1a;
+    padding-bottom: 40px;
+}
+.footer-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #939495;
+    padding: 30px 0;
+}
+.left-block{
+    display: flex;
+    align-items: center;
+}
+.course-number{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    color: #a2a2a4;
+}
+.course-block{
+    margin-left: 60px ;
+    line-height: 1.5;
+}
+.course-name{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    letter-spacing: 0.8px;
+    color: black;
+}
+.course-count{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    color: #9a9a9b;
+}
+.footer-row4{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+}
 
+@media (max-width: 1120px){
+.container{
+    padding: 0 20px;
+}
+}
+
+@media (max-width: 992px){
+
+}
+
+@media(max-width: 756px){
+
+}
+
+@media(max-width: 578px){
+
+}
